# Slang

./: .gitignore  CMakeLists.txt  SLang.c  readme.md
com/: ast.c  com.c  com_file.c  com_want.c  compile.c  gram.y  lambda.c  parser.y  scanner.l  token.l
disasm/: disasm.c  line.c
file/: file.c  load.c  scom.c
include/: SLang.h
include/com/: ast.h  com.h  com_file.h  com_want.h  compile.h  lambda.h
include/disasm/: disasm.h  line.h
include/file/: file.h  load.h  scom.h
include/lib/: gift.h  lambda.h  opcode.h  stack.h  vector.h
include/object/: class.h  object.h
include/vm/: runtime.h  vm_call.h
include/vm/gc/: gc.h
lib/: gift.c  lambda.c  stack.c  vector.c
test/: test_vector.c
test/add/: add.slang
vm/: runtime.c  vm_call.c
vm/gc/: alloc.c  gc.c
vm/runtime/: vm_call.c
